<resources>
    <string name="app_name">My Assistant</string>
    <string name="add_category">New List</string>
    <string name="category_search">Search Lists</string>
    <string name="edit_categories">Edit Lists</string>
    <string name="categories_title">My Task Lists</string>
    <string name="add_category_hint">Your list name</string>
    <string name="add_category_title">Add Your List</string>
    <string name="add_category_button">Add List</string>
    <string name="add_category_success_message">List created</string>
    <string name="add_category_empty_error">Error creating list</string>
    <string name="edit_category_hint">Enter a new list name</string>
    <string name="edit_category_title">List new name</string>
    <string name="edit_category_button">Change name</string>
    <string name="edit_category_success_message">List name changed!</string>
    <string name="edit_category_empty_error">No change saved</string>
    <string name="delete_category_title">Delete List!!!</string>
    <string name="delete_category_button">You are about to drop the list</string>
    <string name="delete_category_success_message">List deleted!</string>
    <string name="delete_category_empty_error">Delete List Failure!</string>
    <string name="task_search">Search task</string>
    <string name="add_task">Add a task</string>
    <string name="tasks_title">Tasks</string>
    <string name="add_task_title">Add your task</string>
    <string name="add_task_empty_error">Task name must not be empty</string>
    <string name="add_task_button">Create task</string>
    <string name="add_task_hint">Introduce your task name</string>
    <string name="edit_task_hint">Enter new task name</string>
    <string name="edit_task_title">Task edition</string>
    <string name="edit_task_success_message">Task successfully edited</string>
    <string name="delete_task_success_message">Task deleted successfully</string>
    <string name="edit_task_button">Save changes</string>
    <string name="name_task_hint">Introduce task name. Required</string>
    <string name="description_task_hint">Introduce a description. Max 20 lines. Not required</string>
    <string name="add_task_success_message">Task successfully created</string>
    <string name="priority">Priority</string>
    <string name="taskPriorityRadioButton1">1</string>
    <string name="taskPriorityRadioButton2">2</string>
    <string name="taskPriorityRadioButton3">3</string>
    <string name="taskPriorityRadioButton4">4</string>
    <string name="taskPriorityRadioButton5">5</string>
    <string name="quote_of_the_day">Quote of the day</string>
</resources>