<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTaskTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/name_task_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="26"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTaskTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/description_task_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="20"
            android:lines="5"
            android:maxLength="250"
            />

    </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/priority"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/priorityRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="5">

                <RadioButton
                    android:id="@+id/priorityRadio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/taskPriorityRadioButton1" />

                <RadioButton
                    android:id="@+id/priorityRadio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/taskPriorityRadioButton2" />

                <RadioButton
                    android:id="@+id/priorityRadio3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/taskPriorityRadioButton3" />

                <RadioButton
                    android:id="@+id/priorityRadio4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/taskPriorityRadioButton4" />

                <RadioButton
                    android:id="@+id/priorityRadio5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/taskPriorityRadioButton5" />

            </RadioGroup>

        </LinearLayout>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Color:"/>

    </LinearLayout>

    <com.google.android.material.slider.Slider
        android:id="@+id/redSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelBehavior="gone"
        app:tickVisible="false"
        android:valueFrom="0"
        android:valueTo="255"
        android:stepSize="1"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/greenSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelBehavior="gone"
        app:tickVisible="false"
        android:valueFrom="0"
        android:valueTo="255"
        android:stepSize="1"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/blueSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelBehavior="gone"
        app:tickVisible="false"
        android:valueFrom="0"
        android:valueTo="255"
        android:stepSize="1"/>-->
</LinearLayout>